syntax = "proto3";

import "google/api/annotations.proto";
import "validate/validate.proto";

package api.todo.v1;
option go_package = "goproject/api/todo/v1;v1";

import "api/common/common.proto";

service Todo {
  rpc CreateTodo (CreateTodoRequest) returns (CreateTodoReply) {
    option (google.api.http) = {
      post: "/todo/create",
      body: "*",
    };
  }
  rpc UpdateTodo (UpdateTodoRequest) returns (common.UpdateResp) {
    option (google.api.http) = {
      put: "/todo/update",
      body: "*",
    };
  };
  rpc DeleteTodo (common.IDReq) returns (common.UpdateResp) {
    option (google.api.http) = {
      delete: "/todo/delete"
    };
  };
  rpc GetTodo (common.IDReq) returns (GetTodoReply) {
    option (google.api.http) = {
      get: "/todo/get"
    };
  };
  rpc ListTodo (ListTodoRequest) returns (ListTodoReply) {
    option (google.api.http) = {
      get: "/todo/list"
    };
  };
}

message CreateTodoRequest {
  // title
  string title   = 1 [(validate.rules).string.min_len = 1];
  // detail
  string detail  = 2;
}
message CreateTodoReply {
  // id
  int32  id     = 1;
}

message UpdateTodoRequest {
  // id
  int32  id     = 1;
  // title
  string title  = 2;
  // detail
  string detail = 3;
}

message GetTodoReply {
  // id
  int32  id     = 1;
  // uuid
  string uuid   = 2;
  // 标题
  string title  = 3;
  // detail
  string detail = 4;
  // 创建时间
  int32  ctime  = 5;
  // 修改时间
  int32  mtime  = 6;
}

message ListTodoRequest {
  // id
  int32 id          = 1;
  // 模糊搜索
  string key        = 2;
  // title
  string title      = 3;
  // 分页
  int32  page_size  = 4;
  // 分页
  int32  page_num   = 5;
  // 排序字段
  string orderby    = 6;
  // 排序顺序
  string asc        = 7;
  // 我的 0.全部 1.我的
  common.Mine mine         = 8;
}
message ListTodoReply {
  repeated TodoForList data  = 1;
  int32    count             = 2;
}
message TodoForList {
  // id
  int32  id     = 1;
  // uuid
  string uuid   = 2;
  // 标题
  string title  = 3;
  // 创建时间
  int32  ctime  = 4;
  // 修改时间
  int32  mtime  = 5;
}