syntax = "proto3";

package kratos.api;
option go_package = "goproject/app/demo/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message APP {
    string name = 1;
    string version = 2;
  }
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  APP app = 1;
  HTTP http = 2;
  GRPC grpc = 3;
}

message Data {
  message Mysql {
    string dsn = 1;
    int64 active = 2;
    int64 idle = 3;
    google.protobuf.Duration idle_timeout = 4;
    google.protobuf.Duration exec_timeout = 5;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    string password = 3;
    int64 db_num = 4;
    int64 active = 5;
    int64 idle = 6;
    google.protobuf.Duration dial_timeout = 7;
    google.protobuf.Duration max_conn_lifetime = 8;
    google.protobuf.Duration read_timeout = 9;
    google.protobuf.Duration write_timeout = 10;
    google.protobuf.Duration idle_timeout = 11;
  }
  Mysql mysql = 1;
  Redis redis = 2;
}

message Registry {
  message Nacos {
    string addr = 1;
    uint64 port = 2;
    string namespace_id = 3;
    string group = 4;
  }
  Nacos nacos = 1;
}

message Auth {
  message Jwt{
    string service_secret_key = 1;
    string api_secret_key = 2;
  }
  Jwt jwt = 1;
}
